@@ -40,6 +40,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18538: ``python -m dis`` now uses argparse for argument processing.
+  Patch by Michele Orrù.
+
 - Issue #18394: Close cgi.FieldStorage's optional file.
 
 - Issue #17702: On error, os.environb now removes suppress the except context
